Bug 132808 - [patch] kwalletmanager not populating passwords
Summary: [patch] kwalletmanager not populating passwords
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: HI normal
Target Milestone: ---
Assignee: Unknown
URL:
Keywords:
: 129138 144746 162399 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-08-22 16:10 UTC by Ritesh Raj Sarraf
Modified: 2008-06-27 23:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
snapshot (61.33 KB, image/png)
2006-08-22 16:11 UTC, Ritesh Raj Sarraf
Details
snapshot2 (149.37 KB, image/png)
2006-08-22 16:13 UTC, Ritesh Raj Sarraf
Details
snapshot3 (147.87 KB, image/png)
2006-08-22 16:13 UTC, Ritesh Raj Sarraf
Details
patch (2.31 KB, patch)
2008-04-30 01:12 UTC, Michael Leupold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ritesh Raj Sarraf 2006-08-22 16:10:22 UTC
Version:            (using KDE KDE 3.5.4)
Installed from:    Debian testing/unstable Packages
OS:                Linux

What is the role of Binary Data in kwalletmanager ?
Is it usable ?

I merged around 300 passwords from my other laptop's kwalletmanager, and they've been added as Binary Data.
Something to note is that kwalletmanager does understand the password correct but it doesn't feed it to the password field in the web pages because whenever you give a password which is different from the one in kwalletmanager's database, it prompts you to save it assuming that you might have changed your password.
In my case, kwalletmanager doesn't prompt me. That proves that kwalletmanager has the correct password in its database as *Binary Data* because under the passwords section, there's no password for it.
Bad part is that if it is a bug, it is a serious one. Because kwalletmanager won't save it as password because it is already available as Binary Data. And it might be buggy not to handle/understand Binary Data to the password fields.
This in total makes kwalletmanager unusable.
I've noticed that kwalletmanager is working fine for newer passwords that I created on my new laptop.

If all this "Binary Data" and other stuff seems confusing, please have a look at the attached screenshots I've attached.
Usually, all our web passwords get saved into the "Maps" section. But my case isn't the same. For me, "Binary Data" is containing the real passwords which I've imported and is not usable.

Thanks,
Ritesh
Comment 1 Ritesh Raj Sarraf 2006-08-22 16:11:11 UTC
Created attachment 17458 [details]
snapshot
Comment 2 Ritesh Raj Sarraf 2006-08-22 16:13:22 UTC
Created attachment 17459 [details]
snapshot2
Comment 3 Ritesh Raj Sarraf 2006-08-22 16:13:51 UTC
Created attachment 17460 [details]
snapshot3
Comment 4 Ritesh Raj Sarraf 2006-08-22 16:14:58 UTC
I've also filed a bug at Debian's Bug Database.
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=384038
Comment 5 Ritesh Raj Sarraf 2006-08-24 18:44:20 UTC
This bug looks to be very annoying because even though you have all the passwords, you can't use them.

Do you have any comments on it ?
Comment 6 Ritesh Raj Sarraf 2006-08-25 20:18:52 UTC
I'm sad to say that I had to get it working the dirty way (Please don't term it as a work around in any way).

I had to:
a) take the .kwl file from my old latpop
b) Stop KDE first. (For some reason KDE/Some KDE application was overwriting the old .kwl file I was copying)
c) Kiss you new data added in the .kwl in the new laptop GOODBYE.
d) Overwrite with the old .kwl file from the old laptop.

And then everything works. This definitely is not going to be acceptable for a general KDE user.

In this whole process, I think I've narrowed down to where actually the bug might be (I might be completely wrong).
a) You take the old .kwl file from old laptop to the new laptop.
b) On the new laptop's kwalletmanager, you select the option "Merge" to merge the data from the old .kwl
c) After the merge, kwalletmanager shows all the merged passwords in the "Maps" field. And that is correct.
d) You close the kdewallet window.
e) Now all is gone. When you open the kdewallet again, you see all your data as "Binary Data" which kdewallet understands but cannot use in the webpages' password field.

Hope this will help you with the bug.

What keeps me surprised is that in a sensitive application like this (which involved passwords), you didn't even care to drop a comment. :-(

Probably you're very busy with the KDE4 work. :-)
Comment 7 Ber Kessels 2006-11-06 15:28:53 UTC
This also happens when importing an XML file. Both merge and import seem broken. AFAIKS this is a bug. 
Comment 8 Ritesh Raj Sarraf 2006-11-06 15:53:59 UTC
Okay! One more victim now.
Probably you should confirm the bug, at least.
Comment 9 Tommi Tervo 2006-11-08 13:54:16 UTC
*** Bug 129138 has been marked as a duplicate of this bug. ***
Comment 10 Volker Kuhlmann 2006-11-08 19:41:02 UTC
I had also found earlier (#129138) that the only way to import my passwords again is to do the dirty trickery described in #6, so you're not the first or the only one with this problem.
Comment 11 Ritesh Raj Sarraf 2006-11-09 08:01:17 UTC
In reply to Comment #10

This won't be termed an import at all.
The trick described in Comment #6 simply allows you to overwrite and use your old password database. There is no way, AFAIK, to _import_ the old .kwl file.
Comment 12 Stephan Herrmann 2008-02-21 00:55:54 UTC
Still the same buggy behavior in KDE 4.0.1.
Since upgrading to KDE 4 does not re-use your old kdewallet.kwl
*every* user will need to import old passwords.
That could soon ensure high-score for this bug.
Comment 13 Amilcar do Carmo Lucas 2008-03-05 13:43:29 UTC
Sorry, but I can confirm this. And it's a pita.
I exported from KDE 3.5.6 and could not import into 3.5.9

Comment 14 Michael Leupold 2008-04-30 01:12:04 UTC
Created attachment 24568 [details]
patch

Obviously this is due to some rough edges in kwallet api. Entries get merged
twice, once on merging the actual map/password and then again on merging the
binary data (which you can only get by getting all the entries).

This patch tries to work around this issue by remembering which entries have
already been merged for the current folder.
Comment 15 Michael Leupold 2008-04-30 09:37:57 UTC
*** Bug 144746 has been marked as a duplicate of this bug. ***
Comment 16 Michael Leupold 2008-06-12 23:41:23 UTC
*** Bug 162399 has been marked as a duplicate of this bug. ***
Comment 17 Michael Leupold 2008-06-12 23:50:35 UTC
SVN commit 820017 by mleupold:

Make merging wallets work properly by remembering which keys have already been merged (working around a quirk in the kwallet API).

BUG: 132808


 M  +8 -0      kwalleteditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=820017
Comment 18 Ritesh Raj Sarraf 2008-06-27 23:37:18 UTC
Thank you for fixing this. I just merged my old .kwl file and everything is working absolutely perfect.