Make merging wallets work properly by remembering which keys have already been merged (working around a quirk in the kwallet API).

BUG: 132808

svn path=/trunk/KDE/kdeutils/kwallet/; revision=820017